new tmux config with repeat timer set to 1 sec

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # pane movement shortcuts (same as vim)
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
 
+set -g repeat-time 1000
