--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,22 @@
-FROM nvidia/cuda:10.1-cudnn7-devel-ubuntu18.04
-MAINTAINER Golikov Pavel <golikovp@cs.toronto.edu>
-
-
-RUN apt-get update && apt-get install -y \
+FROM nvidia/cuda:10.2-cudnn7-devel-ubuntu18.04
+ARG user
+ARG userid
+RUN echo ${user}
+RUN apt-get update && \
+apt-get install -y --no-install-recommends \
     sudo \
-    python3 \
-    python3-pip \
+    gdb \
     git \
-    vim \
+    python3-dev \
+    python3-numpy \
+    python3-pip \
+    python-pip \
     tmux \
-&& rm -rf /var/lib/apt/lists/*
+    wget \
+    curl
 
+RUN adduser --home /home/${user} --shell /bin/bash --uid ${userid} --gecos '' --disabled-password ${user}
+RUN adduser ${user} sudo
+RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+RUN echo "export CUDA_INSTALL_PATH=/usr/local/cuda" >> /home/${user}/.bashrc
+RUN rm -rf /var/lib/apt/lists/*
