--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,8 @@
 # pane movement shortcuts (same as vim)
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+bind -n M-j select-pane -L
+bind -n M-';' select-pane -R
+bind -n M-l select-pane -U
+bind -n M-k select-pane -D
+
 
 set -g repeat-time 500
