--- a/docker/ubuntu-20.04/Dockerfile
+++ b/docker/ubuntu-20.04/Dockerfile
@@ -1,5 +1,3 @@
-
-
 FROM ubuntu:20.04
 ARG user
 ARG userid
@@ -28,5 +26,7 @@ RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 RUN sudo add-apt-repository -y ppa:deadsnakes/ppa
 RUN apt-get update && apt-get install -y --no-install-recommends python3.8
 RUN sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 20
+RUN sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.8 20
 RUN sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 20
 RUN sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 20
+
