--- a/docker/ubuntu-20.04-cuda11.2/Dockerfile
+++ b/docker/ubuntu-20.04-cuda11.2/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:20.04
+FROM nvidia/cuda:11.2.2-runtime-ubuntu20.04
 ARG user
 ARG userid
 RUN apt-get update
@@ -8,19 +8,15 @@ apt-get install -y --no-install-recommends \
     sudo \
     software-properties-common \
     gdb \
-    gcc-8 \
-    g++-8 \
+    gcc-9 \
+    g++-9 \
     git \
     python3-dev \
-    python3-numpy \
     python3-pip \
     wget \
     curl \
     vim \
-    clang \
-    llvm \
-    lldb \
-    libnuma-dev \
+    openssh-server \
     pkg-config
 
 
@@ -30,9 +26,9 @@ RUN adduser $user sudo
 RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 RUN sudo add-apt-repository -y ppa:deadsnakes/ppa
-RUN apt-get update && apt-get install -y --no-install-recommends python3.8
-RUN sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 20
-RUN sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.8 20
-RUN sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 20
-RUN sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 20
+RUN apt-get update && apt-get install -y --no-install-recommends python3.10
+RUN sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 20
+RUN sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.10 20
+RUN sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 20
+RUN sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 20
 
