--- a/docker/ubuntu-20.04-cuda11.2/Dockerfile
+++ b/docker/ubuntu-20.04-cuda11.2/Dockerfile
@@ -1,18 +1,16 @@
-FROM nvidia/cuda:11.2.2-runtime-ubuntu20.04
+# FROM nvidia/cuda:11.2.2-runtime-ubuntu20.04
+FROM nvidia/cuda:11.4.3-runtime-ubuntu20.04
 ARG user
 ARG userid
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
-RUN apt-get update && \
-apt-get install -y --no-install-recommends \
-    sudo \
+RUN apt-get update && apt-get install -y \
     software-properties-common \
+    sudo \
     gdb \
     gcc-9 \
     g++-9 \
     git \
-    python3-dev \
-    python3-pip \
     wget \
     curl \
     vim \
@@ -21,15 +19,15 @@ apt-get install -y --no-install-recommends \
     pkg-config
 
 
-RUN useradd -ms /bin/bash -u ${userid} ${user}
-RUN passwd -d $user
-RUN adduser $user sudo
-RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
-
-RUN sudo add-apt-repository -y ppa:deadsnakes/ppa
-RUN apt-get update && apt-get install -y --no-install-recommends python3.10
-RUN sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 20
-RUN sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.10 20
-RUN sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 20
-RUN sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 20
-
+RUN useradd -ms /bin/bash -u ${userid} ${user} &&\
+    passwd -d $user &&\
+    adduser $user sudo &&\
+    echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers &&\
+    sudo add-apt-repository -y ppa:deadsnakes/ppa &&\
+    apt-get update && apt-get install -y python3.10 python3-pip &&\
+    sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 20 &&\
+    sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.10 20 &&\
+    sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 20 &&\
+    sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 20 &&\
+    wget nsightsystems-linux-public-2024.1.1.59-3380207.run &&\
+    sudo sh nsightsystems-linux-public-2024.1.1.59-3380207.run
