--- a/docker/ubuntu-22.04-cuda12.1/Dockerfile
+++ b/docker/ubuntu-22.04-cuda12.1/Dockerfile
@@ -1,4 +1,3 @@
-# FROM nvidia/cuda:11.2.2-runtime-ubuntu20.04
 FROM nvidia/cuda:12.1.0-devel-ubuntu22.04
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
@@ -13,6 +12,6 @@ RUN apt-get update && apt-get install -y \
     vim \
     git-lfs
 
-
 RUN pip3 install tensorrt_llm -U --pre --extra-index-url https://pypi.nvidia.com &&\
-    pip3 install mpmath==1.3.0
+    pip3 install mpmath==1.3.0 &&\
+    
